@@ -3,7 +3,7 @@
     Project              : LabPlot
     Description          : NSL special basic functions
     --------------------------------------------------------------------
-    SPDX-FileCopyrightText: 2017-2019 Stefan Gerlach <stefan.gerlach@uni.kn>
+    SPDX-FileCopyrightText: 2017-2021 Stefan Gerlach <stefan.gerlach@uni.kn>
     SPDX-License-Identifier: GPL-2.0-or-later
 */
 
@@ -24,6 +24,25 @@ double nsl_sf_drand(void);
 double nsl_sf_sgn(double x);
 /* Heavyside theta function */
 double nsl_sf_theta(double x);
+
+/* non-uniform random number generation */
+double nsl_sf_ran_gaussian(double sigma);
+double nsl_sf_ran_exponential(double mu);
+double nsl_sf_ran_laplace(double a);
+double nsl_sf_ran_cauchy(double a);
+double nsl_sf_ran_rayleigh(double sigma);
+double nsl_sf_ran_landau(void);
+double nsl_sf_ran_levy(double c, double alpha);
+double nsl_sf_ran_gamma(double a, double b);
+double nsl_sf_ran_flat(double a, double b);
+double nsl_sf_ran_lognormal(double zeta, double sigma);
+double nsl_sf_ran_chisq(double nu);
+double nsl_sf_ran_tdist(double nu);
+double nsl_sf_ran_logistic(double a);
+
+double nsl_sf_ran_poisson(double mu);
+double nsl_sf_ran_bernoulli(double p);
+double nsl_sf_ran_binomial(double p, double n);
 
 /* log2(x) for integer value x */
 int nsl_sf_log2_int(unsigned int x);
